--- a/stylesheets/layout/_header.scss
+++ b/stylesheets/layout/_header.scss
@@ -85,7 +85,7 @@
   }
 
   &__burger-menu {
-    max-height: in-rem(25);
+    height: in-rem(30);
 
     margin-top: in-rem(20);
     padding: 0;
